# ConfigArcLauncher

./: .gitignore  README.md  common.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  i18n.ts  main.css  main.tsx
src-tauri/: Cargo.toml  configarc_active_game.json  configarc_games.json  segatools.ini  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  trusted.rs
src-tauri/src/config/: mod.rs  paths.rs  profiles.rs  segatools.rs
src-tauri/src/games/: launcher.rs  model.rs  store.rs
src/api/: configApi.ts  gamesApi.ts  jsonConfigApi.ts  tauriClient.ts  trustedApi.ts
src/components/Layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx  layout.css
src/components/common/: AlertDialog.tsx  ConfirmDialog.tsx  Dialog.css  Modal.css  Modal.tsx  PromptDialog.tsx  Toast.css
src/components/config/: OptionField.tsx  SectionAccordion.tsx  SegatoolsEditor.tsx  config.css
src/components/games/: GameCard.tsx  GameEditorDialog.tsx  GameList.tsx  games.css
src/components/settings/: SettingsForm.tsx
src/locales/en/: translation.json
src/locales/zh/: translation.json
src/routes/: ConfigEditorPage.tsx  GameListPage.tsx  JsonEditorPage.tsx  ManageAimePage.css  ManageAimePage.tsx  ManageDataPage.tsx  ManageModsPage.tsx  SegatoolsDeployPage.tsx  SettingsPage.tsx  json-editor.css
src/state/: configStore.ts  gamesStore.ts
src/types/: config.ts  games.ts  jsonConfig.ts  trusted.ts
src/utils/: vkCodes.ts
